# pbar

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  appveyor.yml
.github/workflows/: build.yml
examples/: multiple.rs  simple.rs  year_progress.rs
src/: bar.rs  format.rs  layout.rs  lib.rs  main.rs  multi.rs  style.rs  util.rs
src/term/: mod.rs  unix.rs  windows.rs
